Platform 1.25

* Stats

  We created a MaxGauge stats class for reporting the maximum value, over the
  one minute reporting interval, value of a metric.

Platform 1.24

* Logging

  Platform applications with log.output-file configured now also write a
  bootstrap.log file in the same directory. The bootstrap.log file contains
  a copy of messages logged from Bootstrap and is truncated on every startup.
  This is intended to make the (redacted) configuration and other startup
  information more accessible when troubleshooting.

  We added Logging.addLogTester() and Logging.resetLogTesters() methods for
  writing unit tests that verify logging.

* TestingHttpClient

  We created a default constructor for TestingHttpClient. The constructed
  TestingHttpClient needs a call to setProcessor(Processor) before it can
  be effectively used.

  We added TestingHttpClient.getRequestCount().

* TestingTicker and SerialScheduledExecutorService

  We added TestingTicker.elapseTime() and deprecated TestingTicker.increment()
  for consistency with SerialScheduledExecutorService.

  We added elapseTimeNanosecondBefore() methods to TestingTicker and
  SerialScheduledExecutorService.

* Library Upgrades

  - jnr-posix to 3.0.17

Platform 1.23

* BalancingHttpClient

  When a ResponseHandler throws an exception, the ServiceClient.Failure.Count
  metric incremented is given an additional "handlerException" tag with a
  value of that exception's class.

* [Bug] Fixed the request log's logic for when to use addresses in the
  X-Forwarded-For: header.

  - Ignore X-Forwarded-For: if the connection is from an external IP address.
  - Use the closest (last-listed) external IP address, if any.
  - Use the furthest (first-listed) IP address if all addresses are internal.

* Library Upgrades

  - Jetty to 9.2.12

Platform 1.22

* BalancingHttpClient

  We a created HttpClientBinder.bindBalancingHttpClient(String name,
  Class<? extends Annotation> annotation, Set<URI> baseUris) method for